# gatekeeper

./: .gitignore  LICENSE  README.md  gatekeeper.yaml  pyproject.toml
.github/workflows/: ci.yml  release.yml
action/: action.yml  example-workflow.yml
docs/: design.md
gatekeeper_cli/: __init__.py  main.py  models.py  policy.py  runner.py
gatekeeper_cli/analyzers/: __init__.py  osv.py  popular_packages.py  python_manifests.py  typosquat.py
tests/: conftest.py  test_cli.py  test_gitleaks.py  test_lockfile.py  test_models.py  test_osv.py  test_policy.py  test_python_manifests.py  test_runner.py  test_typosquat.py
tests/fixtures/bad_typosquat/: gatekeeper.yaml  package.json
tests/fixtures/clean/: gatekeeper.yaml  package-lock.json  package.json  requirements.txt
tests/fixtures/invalid_policy/: gatekeeper.yaml
tests/fixtures/missing_lockfile/: package.json
tests/fixtures/npm_install_script/: gatekeeper.yaml  package-lock.json  package.json
tests/fixtures/npm_lockfile_v1/: package-lock.json  package.json
tests/fixtures/pnpm_only/: package.json  pnpm-lock.yaml
tests/fixtures/pyproject_poetry_pinned/: pyproject.toml
tests/fixtures/pyproject_typosquat/: pyproject.toml
tests/fixtures/pyproject_unpinned/: pyproject.toml
tests/fixtures/requirements_mixed/: requirements.txt
tests/fixtures/yarn_only/: package.json
